--- a/restaurants/templates/restaurant_detail.html
+++ b/restaurants/templates/restaurant_detail.html
@@ -1,8 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Detailed Restaurant list</title>
-</head>
+{% extends "base.html" %}
+
+{% block name_me %}
+ Detailed Restaurant list
+{% endblock name_me %}
+
+{% block stuff %}
+
+
 <body>
 	<a href="{% url 'restaurants_list' %}">
 	<p>
@@ -23,4 +27,4 @@
  
 
 </body>
-</html>
+{% endblock stuff %}
