--- a/restaurants/templates/restaurant_list.html
+++ b/restaurants/templates/restaurant_list.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title>Restaurant</title>
-</head>
+{% extends "base.html" %}
+
+{% block name_me %}
+Restaurant
+{% endblock name_me %}
+
+{% block stuff %}
 <body>
 	{% for item in restaurants %}
 	<a href="{% url 'restaurant_detail' restaurant_id=item.id %}">
@@ -12,10 +13,12 @@
 		<li>Description: {{item.description}}</li>
 		<li>Opening time: {{item.opening_time}}</li>
 		<li>Closing time: {{item.closing_time}}</li>
+		<li><a href="{% url 'delete' restaurant_id=item.id %}"><input type="button" value="delete"></a></li>
+		<li><a href="{% url 'restaurant_update' restaurant_id=item.id %}"><input type="button" value="update"></a></li>
 	</ul>
     </a>
 	{% endfor %}
 
 
 </body>
-</html>
+{% endblock stuff %}
