--- a/restaurants/templates/detailview.html
+++ b/restaurants/templates/detailview.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html lang="eng">
-<head>
-	<meta charset="utf-8"> <!-- what does this do -->
-	<title>Burger Menu</title>
-</head>
+{% extends "base.html" %}
+
+{% block name_me %}
+Burger Menu
+{% endblock name_me %}
+
+{% block stuff %}
 <body>
 	<h1>{{title}}</h1>   
 	<p>{{content}}</p>
@@ -17,4 +18,4 @@
 
 
 </body>
-</html>
+{% endblock stuff %}
