--- a/restaurants/templates/restaurant_update.html
+++ b/restaurants/templates/restaurant_update.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %}
+
 {% block name_me %}
  Update
 {% endblock name_me %}
@@ -8,7 +10,7 @@
 <body>
 	<form action="{% url 'restaurant_update' restaurant_id=restaurant_obj.id %}" method="POST">
 		{% csrf_token %}
-		{{update_form.as_p}}
+		{{update_form|crispy}}
 		<input type="submit" value="Create">
 	</form>
 </body>
