--- a/restaurants/templates/restaurant_create.html
+++ b/restaurants/templates/restaurant_create.html
@@ -7,11 +7,11 @@
 {% endblock name_me %}
 
 {% block stuff %}
-<body>
-	<form action="" method="POST">
+
+	<form action="{% url 'restaurant_create' %}" method="POST" enctype="multipart/form-data">
 		{% csrf_token %}
 		{{create_form|crispy}}
 		<input type="submit" value="Create">
 	</form>
-</body>
+
 {% endblock stuff %}
