--- a/restaurants/templates/restaurants_list.html
+++ b/restaurants/templates/restaurants_list.html
@@ -4,18 +4,31 @@ Restaurant
 {% endblock name_me %}
 
 {% block stuff %}
+<br>
+<form action="{% url 'restaurants_list' %}" method="GET">
+	<div class="input-group mb-3">
+		<input type="text" class="form-control" placeholder="Search for article..." aria-label="Search" name="q">
+		<div class="input-group-append">
+			<input type="submit" class="input-group-text" value="Search">
+		</div>
+	</div>
+</form>
+<div class="row">
 {% for item in restaurants %}
 
 <div class="card-columns">
 	<div class="card">
-		<img class="card-img-top" src="{{item.img_url}}" alt="Card image cap">
-		<div class="card-body">
-			<a href="{% url 'restaurant_detail' restaurant_id=item.id %}">
+			{% if item.image %}
+				<img class="card-img-top" src="{{item.image.url}}" alt="Card image cap">
+			{% endif %}
+			<div class="card-body">
+				<a href="{% url 'restaurant_detail' restaurant_id=item.id %}">
 				<ul>
 					<li><button type="button" class="btn btn-primary btn-lg btn-block"><h5 class="card-title">{{item.name}}</h5></button></li>
 					<li><button type="button" class="btn btn-secondary btn-lg btn-block"><p class="card-text">{{item.description}}</p></button></li>
 					<li><p class="card-text"><small class="text-muted">Opening time: {{item.opening_time}}</small></p></li>
 					<li><p class="card-text"><small class="text-muted">Closing time: {{item.closing_time}}</small></p></li>
+					<li><p class="card-text"><small class="text-muted">Publish date: {{item.publish_date}}</small></p></li>
 					<li><a href="{% url 'restaurant_delete' restaurant_id=item.id %}"><button type="button" class="btn btn-danger">Delete</button></a></li>
 					<li><a href="{% url 'restaurant_update' restaurant_id=item.id %}"><button type="button" class="btn btn-warning">Update</button></a></li>
 				</div>
@@ -23,6 +36,7 @@ Restaurant
 		</div>
 	</ul>
 </a>
+</div>
 
 
 {% endfor %}
