--- a/restaurants/templates/restaurant_detail.html
+++ b/restaurants/templates/restaurant_detail.html
@@ -18,4 +18,15 @@
 		<li>Closing time: {{restaurant_detail.closing_time}}</li>
 	</ul>
 
+	<ul>
+
+		{% for item in items %}
+		<li>{{item.name}}</li>
+		<li>{{item.description}}</li>
+		<li>{{item.price}}</li>
+		{% endfor %}
+	</ul>
+
+
+
 {% endblock stuff %}
