--- a/restaurants/templates/base.html
+++ b/restaurants/templates/base.html
@@ -61,10 +61,16 @@
       </li>
       {% endif %}
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <form action="{% url 'restaurants_list' %}" method="GET">
+  <div class="input-group mb-3">
+    <input type="text" class="form-control" placeholder="Search for a restaurant..." aria-label="Search" name="q">
+    <div class="input-group-append">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+      {# <input type="submit" class="input-group-text" value="Search"> #}
+    </div>
+  </div>
+</form>
+
   </div>
 </nav>
 
